[package]
name = "shard"
version = "0.1.0"
authors = ["Artem Shepelin <4.shepelin@gmail.com>"]
description = """Shard is a CLI program for offscreen rendering WGSL pixel \
(fragment) shaders into images (PNG) or animations (GIF)."""
edition = "2021"
license = "GPL-3"

[dependencies]
bytemuck = "1.14.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
failure = "0.1.8"
flume = "0.11.0"
gif = "0.13.1"
log = "0.4.20"
png = "0.17.11"
pollster = "0.3.0"
wgpu = { version = "0.19.1", features = ["glsl"] }
